--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^6.0.1",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
